--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Website title</h1>
+    <h2>THIS WEBSITE IS AWESOME</h2>
     <p>this is a very cool and interesting website</p>
     <p>we have so many cool things</p>
     <a href="https://docs.emmet.io/cheat-sheet/">Emmet Cheat cheat-sheet</a>
