added generic portfolio text

--- a/index.html
+++ b/index.html
@@ -9,11 +9,35 @@
 <body>
     <h1>Portfolio Website</h1>
 
-    <div>
-        <img src="https://st.depositphotos.com/1144472/2003/i/450/depositphotos_20030237-stock-photo-cheerful-young-man-over-white.jpg" alt="">
+    <div class="hero">
+        <img src="https://st.depositphotos.com/1144472/2003/i/450/depositphotos_20030237-stock-photo-cheerful-young-man-over-white.jpg" alt="Profile photo placeholder">
         <p>(pretend this is a picture of me because I can't actually use one)</p>
-        <p>we have so many cool things</p>
-        <a href="https://docs.emmet.io/cheat-sheet/">Emmet cheatsheet</a>
     </div>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I was born in _____ and I've always had an interest in _____.</p>
+        <p>I grew up in _____ and later studied _____ at _____.</p>
+        <p>Currently, I work as a _____ specializing in _____.</p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>Technical: _____, _____, _____</p>
+        <p>Tools &amp; frameworks: _____, _____, _____</p>
+    </section>
+
+    <section id="projects">
+        <h2>Selected Projects</h2>
+        <p><strong>Project Name:</strong> _____ — A brief description: _____.</p>
+        <p><strong>Project Name:</strong> _____ — A brief description: _____.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: _____</p>
+        <p>LinkedIn: _____</p>
+        <p>Website / Portfolio: _____</p>
+    </section>
 </body>
 </html>
