--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I was born in _____ and I've always had an interest in _____.</p>
-        <p>I grew up in _____ and later studied _____ at _____.</p>
-        <p>Currently, I work as a _____ specializing in _____.</p>
+        <p>I was born in 2009 and I've always had an interest in programming.</p>
+        <p>I grew up in a household and later studied things at places.</p>
+        <p>Currently, I work as an unemployed person specializing in not having a job.</p>
     </section>
 
     <section id="skills">
         <h2>Skills</h2>
-        <p>Technical: _____, _____, _____</p>
-        <p>Tools &amp; frameworks: _____, _____, _____</p>
+        <p>Technical: HTML, CSS, JavaScript</p>
+        <p>Tools &amp; frameworks: Git, VS Code, Godot</p>
     </section>
 
     <section id="projects">
@@ -35,9 +35,8 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: _____</p>
-        <p>LinkedIn: _____</p>
-        <p>Website / Portfolio: _____</p>
+        <p>Email: Yes, I have one of those!</p>
+        <p>LinkedIn: No, I don't have one sorry.</p>
     </section>
 </body>
 </html>
