--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img class="profile" src="https://st.depositphotos.com/1144472/2003/i/450/depositphotos_20030237-stock-photo-cheerful-young-man-over-white.jpg" alt="Profile photo placeholder">
                 <div class="hero-copy">
                     <h2>Hi — I'm a hobbyist developer</h2>
-                    <p>Since I was born, I've always had an interest in programming. I enjoy games and exploring how they're made. I build projects for fun and learning.</p>
+                    <p>Since I was born, I've always had an interest in programming. I've always loved games, which led me to explore game development. Currently, I build small projects for fun and learning.</p>
                 </div>
             </div>
         </section>
@@ -52,12 +52,12 @@
             <h2>Selected Projects</h2>
             <div class="projects-grid">
                 <article class="card">
-                    <h3>Project Name</h3>
-                    <p>A short description of the project and what you learned building it.</p>
+                    <h3>Fractured</h3>
+                    <p>A website made without any use of AI to develop skills with HTML and CSS.</p>
                 </article>
                 <article class="card">
-                    <h3>Project Name</h3>
-                    <p>A short description of the project and what you learned building it.</p>
+                    <h3><a href="gamepage.html">Minigames</a></h3>
+                    <p>A collection of small games I developed to practice game design skills.</p>
                 </article>
             </div>
         </section>
